--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "react": "16.6.1",
     "react-native": "0.57.5",
+    "react-native-elements": "^0.19.1",
     "react-native-firebase": "^5.1.0",
     "react-native-gesture-handler": "^1.0.10",
     "react-native-sha256": "^1.2.2",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^3.0.4"
   },
   "devDependencies": {
