--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-native-gesture-handler": "^1.0.10",
     "react-native-sha256": "^1.2.2",
     "react-native-vector-icons": "^6.1.0",
-    "react-navigation": "^3.0.4"
+    "react-navigation": "^3.0.4",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
